# bid-predictor-dashboard

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  MANIFEST.in  README.md  dash_app.py  pyproject.toml  requirements.txt
assets/: responsive.css
bid_predictor_ui/: __init__.py  constants.py  data.py  data_sources.py  dropdowns.py  feature_config.py  feature_range_defaults.yaml  formatting.py  model_registry.py  plotting.py  predictions.py  scenario.py  selection_controls.py  snapshots.py  tables.py
bid_predictor_ui/acceptance_explorer/: __init__.py  layout.py  view.py
bid_predictor_ui/feature_sensitivity/: __init__.py  baseline.py  feature_controls.py  filters.py  graph.py  layout.py  range_controls.py  records.py  table.py
bid_predictor_ui/performance_history/: __init__.py  data.py  layout.py  view.py
bid_predictor_ui/performance_tracker/: __init__.py  layout.py  view.py
bid_predictor_ui/route_level_info/: __init__.py  callbacks.py  data_loader.py  metrics.py  redshift_loader.py  view.py
bid_predictor_ui/snapshot/: __init__.py  filters.py  layout.py  model_loader.py  predictions.py  summary.py  table.py  view.py
bid_predictor_ui/utils/: redis_client.py
tests/unit/: test_data.py  test_data_sources.py  test_dropdowns.py  test_formatting.py  test_model_registry.py  test_module_imports.py  test_performance_history_data.py  test_performance_history_view.py  test_performance_layout.py  test_performance_overview_metrics.py  test_plotting.py  test_predictions.py  test_responsive_layouts.py  test_scenario.py  test_snapshots.py  test_tables.py
